<resources>
    <string name="app_name">美食系统</string>
    <string name="login_message_user">登陆</string>
    <string name="login_message_userIn">账号</string>
    <string name="login_message_password">密码</string>
    <string name="login_message_passwordIn">Name</string>
    <string name="login_button_login">登陆</string>
    <string name="login_checkbox_user">记住账号</string>
    <string name="food_all">美食店</string>
</resources>
