<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_wihte_frame"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_message_user"
        android:textSize="50sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login_message_userIn" />

        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#EEEFFF" />

        <EditText
            android:id="@+id/login_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login_message_password" />

        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="#EEEFFF" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:inputType="textPassword" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/activity_login_checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_checkbox_user"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_login_forget_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="忘记密码"
            android:textColor="@color/skyblue" />

        <TextView
            android:id="@+id/activity_login_phone_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/skyblue"
            android:text="手机注册"
            android:gravity="center"/>

        <TextView
            android:id="@+id/activity_login_new_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="新用户注册"
            android:textColor="@color/skyblue"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>